# cmake_simple

./: CMakeLists.txt  README.md
src/App/: Aron_main.cpp  CMakeLists.txt
src/bAr/: CMakeLists.txt  barcode.cpp  barcode.h  barcode2.cpp  barcode2.h  retweetcollection.h
src/fOo/: CMakeLists.txt  foolish.cpp  foolish.h  foolish2.cpp  foolish2.h  soundex.cpp  soundex.h
t/: CMakeLists.txt  basic.cpp  using_matcher.cpp
